fixed text not aligning to right

--- a/site.css
+++ b/site.css
@@ -4,12 +4,12 @@
 
 html,
 body {
-  height: 100px;
+  height: 100%;
 }
 
 body {
   font-family: Arial, Helvetica, sans-serif;
-  background-color: lightgrey;
+  background-color: #999;
 }
 
 p {
@@ -58,12 +58,10 @@ footer {
 aside,
 article {
   padding: 2em;
-  /* pixels are fixed values and ems are proportional, try zooming into the text and see what happens */
 }
 
 aside {
   text-align: center;
-  /* Center an image or text use text align, if its in a container */
 }
 
 article {
@@ -88,32 +86,39 @@ article {
   }
 }
 
-/* Pies */
-
+/* Pie */
 .pie {
   width: 200px;
   padding: 10px;
   margin: 10px;
-  background-color: white;
+  background-color: #fff;
   border: solid 1px #ccc;
 }
 
 .pie img {
   width: 100%;
 }
+
 .pie .title {
   font-weight: bold;
-}
-
-.pie .columns {
-  width: 100px;
 }
 
 .pie .price {
   text-align: right;
 }
-/* This is not aligning it to the right? */
+
+.pie .columns {
+  width: 100%;
+}
 
 .pie .columns div {
   width: 50%;
+}
+
+.pie button {
+  background-color: #f6aeae;
+  padding: 10px;
+  border: solid 1px #f6aeae;
+  border-radius: 3px;
+  color: #fff;
 }
